RESOLVED FIXED 81297
[BlackBerry] Crash when going back from an xhtml document containing <img>
https://bugs.webkit.org/show_bug.cgi?id=81297
Summary [BlackBerry] Crash when going back from an xhtml document containing <img>
Leo Yang
Reported 2012-03-15 18:47:00 PDT
This is a regression of multipart image change. Internal PR: #144060.
Attachments
Patch (2.99 KB, patch)
2012-03-15 18:52 PDT, Leo Yang
no flags
Leo Yang
Comment 1 2012-03-15 18:52:20 PDT
Rob Buis
Comment 2 2012-03-15 19:13:23 PDT
Comment on attachment 132175 [details] Patch LGTM. I assume you will use the same bug to redo the patch but without the crash?
Leo Yang
Comment 3 2012-03-15 19:20:46 PDT
(In reply to comment #2) > (From update of attachment 132175 [details]) > LGTM. I assume you will use the same bug to redo the patch but without the crash? Thanks for your review. Internal PR #105163 has been re-opened. It's not a high priority pr. I think we should file another upstreaming bug when the fix for it is ready.
Leo Yang
Comment 4 2012-03-15 19:22:06 PDT
Looping Chris Guan ...
Leo Yang
Comment 5 2012-03-15 19:32:09 PDT
Comment on attachment 132175 [details] Patch Sending to the cq ...
WebKit Review Bot
Comment 6 2012-03-16 03:40:08 PDT
Comment on attachment 132175 [details] Patch Clearing flags on attachment: 132175 Committed r110982: <http://trac.webkit.org/changeset/110982>
WebKit Review Bot
Comment 7 2012-03-16 03:40:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.