[BlackBerry] Crash when going back from an xhtml document containing <img> https://bugs.webkit.org/show_bug.cgi?id=81297

Reviewed by Rob Buis.

This is manually reverting the offending internal commit which checked-in before upstreaming.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::canCachePage):


git-svn-id: svn://svn.chromium.org/blink/trunk@110982 bbb929c8-8fbe-4397-9dbb-9b2b20218538