third_party/WebKit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp
@@ -25,7 +25,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "BackingStoreClient.h"
 #include "BackingStore_p.h"
 #include "Base64.h"
-#include "CachedImage.h"
 #include "Chrome.h"
 #include "ChromeClientBlackBerry.h"
 #include "ClientExtension.h"
@@ -35,7 +34,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "FrameView.h"
 #include "HTMLFormElement.h"
 #include "HTMLHeadElement.h"
-#include "HTMLImageElement.h"
 #include "HTMLLinkElement.h"
 #include "HTMLMediaElement.h"
 #include "HTMLMetaElement.h"
@@ -1208,15 +1206,6 @@ bool FrameLoaderClientBlackBerry::canCachePage() const
     if (nodeList.get()->length() > 0)
         return false;
 
-    // The multipart of "multipart/x-mixed-replace" only supports image, correct?
-    // FIXME: Do we have a better place to handle this case?
-    nodeList = m_frame->document()->getElementsByTagName(HTMLNames::imgTag.localName());
-    for (unsigned i = 0; i < nodeList.get()->length(); ++i) {
-        HTMLImageElement* node = static_cast<HTMLImageElement*>(nodeList.get()->item(i));
-        CachedImage* cachedimage = node ? node->cachedImage() : 0;
-        if (cachedimage && cachedimage->response().isMultipartPayload())
-            return false;
-    }
     return true;
 }
 
